<resources>
    <string name="app_name">Go-er</string>
    <string name="txt_username_text">Username</string>
    <string name="txt_logo_text">Go-er</string>
    <string name="btn_login_text">Login</string>
    <string name="txt_team36_text">Team36 &amp; CS5520</string>
    <string name="txt_home_nav">Home</string>
    <string name="txt_go_nav">Go</string>
    <string name="txt_album_nav">Comment</string>
    <string name="txt_setting_nav">Setting</string>
    <string name="google_maps_key">123</string>

    <string name="teamInfo">Sida Zhang\nNUID: 001597035\nGithub: ChronoSIDA\n\nYang Yang\nNUID: 002921499\n Github: alyssayyang\n\nYiqian Huang\nNUID:002965390\nGithub: Lynette-Huang\n\nXue Tang\nNUID: 002916453\nGithub: XueTang422</string>
    <string name="string_host_random_usr">Host User</string>
    <string name="string_userlist">Adam, Angel, Justin, Ben, Ada, Amelia</string>
    <string name="string_time">Time:</string>
    <string name="string_event_name">Event Name:</string>
    <string name="string_random_event">Event Name</string>
    <string name="string_public">Public</string>
    <string name="string_07_26_2022">07/26/2022 09:15 - 07/26/2022 18:00</string>
    <string name="string_art">Art</string>
    <string name="string_link">Link:</string>
    <string name="string_adresssss">https://go-er.event.com</string>
    <string name="string_go_ers">Go-ers:</string>
    <string name="string_descrition">Descrition:</string>
    <string name="string_descs">The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog</string>
    <string name="string_join">Join</string>
    <string name="string_cancel">Back</string>
    <string name="string_interest_txt">We really want to know Events you want to GO:</string>
    <string name="string_password_txt">Please enter password for joining in a private event</string>
    <string name="string_password_hint">6 digits password (Admin Password: 000000)</string>
    <string name="technology">Technology</string>
    <string name="culture">Culture</string>
    <string name="art">Art</string>
    <string name="community">Community</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="games">Games</string>
    <string name="travel">Travel</string>
    <string name="outdoor">Outdoor</string>
    <string name="fitness">Fitness</string>
    <string name="career">Career</string>
    <string name="education">Education</string>
    <string name="hobbies">Hobbies</string>
    <string name="family">Family</string>
    <string name="string_interest_title">We really want to know which events you want to GO:</string>
    <string name="string_in_person">In-Person</string>
    <string name="string_virtual">Virtual</string>
    <string name="religion">Religion</string>
    <string name="science">Science</string>
    <string name="dancing">Dancing</string>
    <string name="string_skip"><u>Skip</u></string>
    <string name="all">All</string>
    <string name="host">Host</string>
    <string name="going">Going</string>
    <string name="saved">Saved</string>
    <string name="past">Past</string>
    <string-array name="dropdown_categories_alertbox">
    </string-array>
</resources>