<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_menu">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_grey"
        android:title="@string/txt_home_nav" />

    <item
        android:id="@+id/navigation_go"
        android:icon="@drawable/ic_action_go"
        android:title="@string/txt_go_nav" />

    <item
        android:id="@+id/navigation_add_event_false"
        android:enabled="false"
        android:title="" />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/@+id/navigation_add_event"-->
<!--        android:layout_width="56dp"-->
<!--        android:layout_height="56dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:elevation="6dp"-->
<!--        android:scaleType="center"-->
<!--        android:icon="@drawable/ic_add"-->
<!--        android:title=""/>-->

    <item
        android:id="@+id/navigation_comment"
        android:icon="@drawable/ic_comment"
        android:title="Comment" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_grey"
        android:title="@string/txt_setting_nav" />

    </menu>