<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="1dp">

                <TextView
                    android:id="@+id/txt_event_name_create"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/string_event_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_host_detail"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_desc_create"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_descrition"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/id_goers_detail"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txt_goers_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txt_goers_detail"
                    app:layout_constraintVertical_bias="0.05" />

                <EditText
                    android:id="@+id/id_desc_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="Add description here"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc_detail"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_time_create"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_time"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/id_timestamp_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.508"
                    app:layout_constraintStart_toEndOf="@+id/img_categories"
                    app:layout_constraintTop_toBottomOf="@+id/id_event_name_detail"
                    app:layout_constraintVertical_bias="0.019" />

                <EditText
                    android:id="@+id/id_timestamp_create"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/string_07_26_2022"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.517"
                    app:layout_constraintStart_toEndOf="@+id/txt_categories_detail"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time_detail"
                    app:layout_constraintVertical_bias="0.018" />

                <TextView
                    android:id="@+id/id_event_name_detail"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/string_random_event"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/img_categories"
                    app:layout_constraintTop_toBottomOf="@+id/txt_event_name_detail"
                    app:layout_constraintVertical_bias="0.005" />

                <TextView
                    android:id="@+id/txt_host_detail"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:text="@string/string_host_random_usr"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.062" />

                <TextView
                    android:id="@+id/txt_isPublic_detail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_public"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_host_detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.062" />

        </LinearLayout>
</ScrollView>